[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Popup.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/SaveSystem.gd" type="Script" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Enemy = ExtResource( 2 )
Coin = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="Popup" parent="." instance=ExtResource( 5 )]

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="SaveSystem" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
